{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 1239,
  "lineage": "43cbadcd-8214-0df5-f878-071a3cb22f77",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "api_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006ed44678bfaa2ba",
            "arn": "arn:aws:ec2:eu-north-1:039612864283:elastic-ip/eipalloc-006ed44678bfaa2ba",
            "domain": "vpc",
            "id": "eipalloc-006ed44678bfaa2ba",
            "network_border_group": "eu-north-1",
            "private_dns": "ip-10-0-2-231.eu-north-1.compute.internal",
            "public_dns": "ec2-51-21-214-171.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.214.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "api_static_ip"
            },
            "tags_all": {
              "Name": "api_static_ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_main_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f22c417da252b71d",
            "arn": "arn:aws:ec2:eu-north-1:039612864283:elastic-ip/eipalloc-0f22c417da252b71d",
            "domain": "vpc",
            "id": "eipalloc-0f22c417da252b71d",
            "network_border_group": "eu-north-1",
            "private_dns": "ip-10-0-1-241.eu-north-1.compute.internal",
            "public_dns": "ec2-56-228-56-115.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.56.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my_main_nat_eip"
            },
            "tags_all": {
              "Name": "my_main_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_pods",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03af728e19388d7ad",
            "arn": "arn:aws:ec2:eu-north-1:039612864283:elastic-ip/eipalloc-03af728e19388d7ad",
            "domain": "vpc",
            "id": "eipalloc-03af728e19388d7ad",
            "network_border_group": "eu-north-1",
            "private_dns": "ip-10-0-1-73.eu-north-1.compute.internal",
            "public_dns": "ec2-51-21-151-18.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.151.18",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_api_EC2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d3e0186c058c4dd",
            "arn": "arn:aws:ec2:eu-north-1:039612864283:instance/i-033b66985d019be13",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-033b66985d019be13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_api_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066ccfa485a674ad2",
            "private_dns": "ip-10-0-2-7.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.7",
            "public_dns": "ec2-13-61-26-204.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.26.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c5affbb2fa302fd0",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049ac68bbecd3419e",
            "tags": {
              "Name": "api-server"
            },
            "tags_all": {
              "Name": "api-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05aa84913b23e53e5"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_api_key_auth",
            "aws_security_group.sg_API",
            "aws_subnet.my_public_subnet_2",
            "aws_vpc.my_main_vpc",
            "data.aws_ami.my_main_ubuntu_EC2_data",
            "data.template_file.api_userdata",
            "tls_private_key.bastion_internal",
            "tls_private_key.jenkins_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_bastion_EC2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d3e0186c058c4dd",
            "arn": "arn:aws:ec2:eu-north-1:039612864283:instance/i-0533ac8b493adcc84",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0533ac8b493adcc84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_bastion_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01832c8d7bc0690a2",
            "private_dns": "ip-10-0-1-87.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.87",
            "public_dns": "ec2-16-170-230-218.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.230.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c6215568eda2b023",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03cbeae40811a199d",
            "tags": {
              "Name": "bastion-server"
            },
            "tags_all": {
              "Name": "bastion-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d656622d887b1339"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_bastion_key_auth",
            "aws_security_group.sg_BASTION",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_main_vpc",
            "data.aws_ami.my_main_ubuntu_EC2_data",
            "data.template_file.bastion_userdata",
            "tls_private_key.bastion_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_builder_EC2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d3e0186c058c4dd",
            "arn": "arn:aws:ec2:eu-north-1:039612864283:instance/i-04a1d0f9fd4ce6c99",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "builder-eks-profile",
            "id": "i-04a1d0f9fd4ce6c99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_builder_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010eb17c0d1d080a4",
            "private_dns": "ip-10-0-3-167.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d73c4e1ae8be587f",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012ca80a2303a146f",
            "tags": {
              "Name": "builder-server"
            },
            "tags_all": {
              "Name": "builder-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d726c00fb309247"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.builder_profile",
            "aws_iam_role.builder_eks_role",
            "aws_key_pair.my_builder_key_auth",
            "aws_security_group.sg_ALB_JENKINS",
            "aws_security_group.sg_BASTION",
            "aws_security_group.sg_BUILDER",
            "aws_security_group.sg_JENKINS",
            "aws_subnet.my_private_subnet_1",
            "aws_vpc.my_main_vpc",
            "data.aws_ami.my_main_ubuntu_EC2_data",
            "data.template_file.builder_userdata",
            "tls_private_key.bastion_internal",
            "tls_private_key.jenkins_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_jenkins_EC2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d3e0186c058c4dd",
            "arn": "arn:aws:ec2:eu-north-1:039612864283:instance/i-053ad9fd99e05c0ea",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ec2_instance_profile_description",
            "id": "i-053ad9fd99e05c0ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_jenkins_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f3231cbe0e382b0",
            "private_dns": "ip-10-0-3-154.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dee87c05bd9adc14",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012ca80a2303a146f",
            "tags": {
              "Name": "jenkins-server"
            },
            "tags_all": {
              "Name": "jenkins-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2b8947767b0674d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.my_ec2_instance_profile",
            "aws_iam_role.my_ec2_instance_role",
            "aws_key_pair.my_jenkins_key_auth",
            "aws_security_group.sg_ALB_JENKINS",
            "aws_security_group.sg_BASTION",
            "aws_security_group.sg_JENKINS",
            "aws_subnet.my_private_subnet_1",
            "aws_vpc.my_main_vpc",
            "data.aws_ami.my_main_ubuntu_EC2_data",
            "data.template_file.jenkins_userdata",
            "tls_private_key.bastion_internal",
            "tls_private_key.jenkins_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_monitoring_EC2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d3e0186c058c4dd",
            "arn": "arn:aws:ec2:eu-north-1:039612864283:instance/i-0c0af8708c40accf3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ec2_instance_profile_description",
            "id": "i-0c0af8708c40accf3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_monitoring_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01e157544aedf94ad",
            "private_dns": "ip-10-0-4-10.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0db0dd9c177d6ad8d",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0218f9dd12b492d9f",
            "tags": {
              "Name": "monitoring-server"
            },
            "tags_all": {
              "Name": "monitoring-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052f18c475e891a06"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.my_ec2_instance_profile",
            "aws_iam_role.my_ec2_instance_role",
            "aws_key_pair.my_monitoring_key_auth",
            "aws_security_group.sg_MONITORING",
            "aws_subnet.my_private_subnet_2",
            "aws_vpc.my_main_vpc",
            "data.aws_ami.my_main_ubuntu_EC2_data",
            "data.template_file.monitoring_userdata",
            "tls_private_key.bastion_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_scanner_EC2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05d3e0186c058c4dd",
            "arn": "arn:aws:ec2:eu-north-1:039612864283:instance/i-0441834d836a47a3b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "my_ec2_instance_profile_description",
            "id": "i-0441834d836a47a3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_scanner_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-028952a65a61fdde1",
            "private_dns": "ip-10-0-3-153.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0131e4db86991e803",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012ca80a2303a146f",
            "tags": {
              "Name": "scanner-server"
            },
            "tags_all": {
              "Name": "scanner-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01411d0cea18a4483"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.my_ec2_instance_profile",
            "aws_iam_role.my_ec2_instance_role",
            "aws_key_pair.my_scanner_key_auth",
            "aws_security_group.sg_SCANNER",
            "aws_subnet.my_private_subnet_1",
            "aws_vpc.my_main_vpc",
            "data.aws_ami.my_main_ubuntu_EC2_data",
            "data.template_file.scanner_userdata",
            "tls_private_key.bastion_internal",
            "tls_private_key.jenkins_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:internet-gateway/igw-0a7d925b7c7f31ecd",
            "id": "igw-0a7d925b7c7f31ecd",
            "owner_id": "039612864283",
            "tags": {
              "Name": "my_main_igw"
            },
            "tags_all": {
              "Name": "my_main_igw"
            },
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "JENKINS_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:loadbalancer/app/JENKINS-alb/89b3093f2cbdd562",
            "arn_suffix": "app/JENKINS-alb/89b3093f2cbdd562",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "JENKINS-alb-1127793743.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:loadbalancer/app/JENKINS-alb/89b3093f2cbdd562",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "JENKINS-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c7f7aace1238d536"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03cbeae40811a199d"
              },
              {
                "subnet_id": "subnet-049ac68bbecd3419e"
              }
            ],
            "subnets": [
              "subnet-03cbeae40811a199d",
              "subnet-049ac68bbecd3419e"
            ],
            "tags": {
              "Name": "Jenkins alb"
            },
            "tags_all": {
              "Name": "Jenkins alb"
            },
            "vpc_id": "vpc-00ab0082adeef6e00",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.sg_ALB_JENKINS",
            "aws_subnet.my_public_subnet_1",
            "aws_subnet.my_public_subnet_2",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "JENKINS_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:listener/app/JENKINS-alb/89b3093f2cbdd562/f6aa03404b352260",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Forbidden",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:listener/app/JENKINS-alb/89b3093f2cbdd562/f6aa03404b352260",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:loadbalancer/app/JENKINS-alb/89b3093f2cbdd562",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "Return 403 Forbidden for all request by default"
            },
            "tags_all": {
              "Name": "Return 403 Forbidden for all request by default"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.JENKINS_alb",
            "aws_security_group.sg_ALB_JENKINS",
            "aws_subnet.my_public_subnet_1",
            "aws_subnet.my_public_subnet_2",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "JENKINS_alb_webhook_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:targetgroup/JENKINS-alb-tg/1489fa497991390a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:listener-rule/app/JENKINS-alb/89b3093f2cbdd562/f6aa03404b352260/5a97e438cee77dad",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/github-webhook"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:listener-rule/app/JENKINS-alb/89b3093f2cbdd562/f6aa03404b352260/5a97e438cee77dad",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:listener/app/JENKINS-alb/89b3093f2cbdd562/f6aa03404b352260",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.JENKINS_alb",
            "aws_lb_listener.JENKINS_alb_listener",
            "aws_lb_target_group.JENKINS_alb_tg",
            "aws_security_group.sg_ALB_JENKINS",
            "aws_subnet.my_public_subnet_1",
            "aws_subnet.my_public_subnet_2",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "JENKINS_allow_admin_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:targetgroup/JENKINS-alb-tg/1489fa497991390a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:listener-rule/app/JENKINS-alb/89b3093f2cbdd562/f6aa03404b352260/ebdc8cac32df52e7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              },
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": [
                  {
                    "values": [
                      "134.94.2.124/32"
                    ]
                  }
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:listener-rule/app/JENKINS-alb/89b3093f2cbdd562/f6aa03404b352260/ebdc8cac32df52e7",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:listener/app/JENKINS-alb/89b3093f2cbdd562/f6aa03404b352260",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.JENKINS_alb",
            "aws_lb_listener.JENKINS_alb_listener",
            "aws_lb_target_group.JENKINS_alb_tg",
            "aws_security_group.sg_ALB_JENKINS",
            "aws_subnet.my_public_subnet_1",
            "aws_subnet.my_public_subnet_2",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "JENKINS_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:targetgroup/JENKINS-alb-tg/1489fa497991390a",
            "arn_suffix": "targetgroup/JENKINS-alb-tg/1489fa497991390a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:targetgroup/JENKINS-alb-tg/1489fa497991390a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "JENKINS-alb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "JENKINS_alb_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:targetgroup/JENKINS-alb-tg/1489fa497991390a-20250610092324453500000009",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:039612864283:targetgroup/JENKINS-alb-tg/1489fa497991390a",
            "target_id": "i-053ad9fd99e05c0ea"
          },
          "dependencies": [
            "aws_iam_instance_profile.my_ec2_instance_profile",
            "aws_iam_role.my_ec2_instance_role",
            "aws_instance.my_jenkins_EC2_instance",
            "aws_key_pair.my_jenkins_key_auth",
            "aws_lb_target_group.JENKINS_alb_tg",
            "aws_security_group.sg_ALB_JENKINS",
            "aws_security_group.sg_BASTION",
            "aws_security_group.sg_JENKINS",
            "aws_subnet.my_private_subnet_1",
            "aws_vpc.my_main_vpc",
            "data.aws_ami.my_main_ubuntu_EC2_data",
            "data.template_file.jenkins_userdata",
            "tls_private_key.bastion_internal",
            "tls_private_key.jenkins_internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_NAT_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f22c417da252b71d",
            "association_id": "eipassoc-0d6883770057cc4e5",
            "connectivity_type": "public",
            "id": "nat-0bc7eab1c100cbd0d",
            "network_interface_id": "eni-01b749224056ded9a",
            "private_ip": "10.0.1.121",
            "public_ip": "56.228.56.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03cbeae40811a199d",
            "tags": {
              "Name": "my_NAT_gw"
            },
            "tags_all": {
              "Name": "my_NAT_gw"
            }
          },
          "dependencies": [
            "aws_eip.my_main_nat_eip",
            "aws_internet_gateway.my_main_igw",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_pods",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03af728e19388d7ad",
            "association_id": "eipassoc-06eaa5e133edad96a",
            "connectivity_type": "public",
            "id": "nat-05e5f6a798cc2228a",
            "network_interface_id": "eni-03e41ae75aad0a808",
            "private_ip": "10.0.1.37",
            "public_ip": "51.21.151.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03cbeae40811a199d",
            "tags": {
              "Name": "NAT-Gateway for Pods"
            },
            "tags_all": {
              "Name": "NAT-Gateway for Pods"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_pods",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:route-table/rtb-039b050e77acdef72",
            "id": "rtb-039b050e77acdef72",
            "owner_id": "039612864283",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0bc7eab1c100cbd0d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_private_route_table"
            },
            "tags_all": {
              "Name": "my_private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_main_nat_eip",
            "aws_internet_gateway.my_main_igw",
            "aws_nat_gateway.my_NAT_gateway",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:route-table/rtb-02c1e171cc50d1f1f",
            "id": "rtb-02c1e171cc50d1f1f",
            "owner_id": "039612864283",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a7d925b7c7f31ecd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_public_route_table"
            },
            "tags_all": {
              "Name": "my_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_main_igw",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_pods",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:route-table/rtb-02a72baae870be7e7",
            "id": "rtb-02a72baae870be7e7",
            "owner_id": "039612864283",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e5f6a798cc2228a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-route for Pods"
            },
            "tags_all": {
              "Name": "Private-route for Pods"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_pods",
            "aws_nat_gateway.nat_gateway_pods",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_private_subnet_1_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdd496583d7802b2",
            "route_table_id": "rtb-039b050e77acdef72",
            "subnet_id": "subnet-012ca80a2303a146f"
          },
          "dependencies": [
            "aws_eip.my_main_nat_eip",
            "aws_internet_gateway.my_main_igw",
            "aws_nat_gateway.my_NAT_gateway",
            "aws_route_table.my_private_route_table",
            "aws_subnet.my_private_subnet_1",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_private_subnet_2_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8317d61ba9d7ccf",
            "route_table_id": "rtb-039b050e77acdef72",
            "subnet_id": "subnet-0218f9dd12b492d9f"
          },
          "dependencies": [
            "aws_eip.my_main_nat_eip",
            "aws_internet_gateway.my_main_igw",
            "aws_nat_gateway.my_NAT_gateway",
            "aws_route_table.my_private_route_table",
            "aws_subnet.my_private_subnet_2",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_public_subnet_1_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048b92d7c2d83d24f",
            "route_table_id": "rtb-02c1e171cc50d1f1f",
            "subnet_id": "subnet-03cbeae40811a199d"
          },
          "dependencies": [
            "aws_internet_gateway.my_main_igw",
            "aws_route_table.my_public_route_table",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_public_subnet_2_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0213f29487854e719",
            "route_table_id": "rtb-02c1e171cc50d1f1f",
            "subnet_id": "subnet-049ac68bbecd3419e"
          },
          "dependencies": [
            "aws_internet_gateway.my_main_igw",
            "aws_route_table.my_public_route_table",
            "aws_subnet.my_public_subnet_2",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_pods_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baaf428b4061d308",
            "route_table_id": "rtb-02a72baae870be7e7",
            "subnet_id": "subnet-0e99af233c0141914"
          },
          "dependencies": [
            "aws_eip.nat_eip_pods",
            "aws_nat_gateway.nat_gateway_pods",
            "aws_route_table.private_route_table_pods",
            "aws_subnet.my_pods_private_subnet_1",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_pods_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddec75158ca2e32e",
            "route_table_id": "rtb-02a72baae870be7e7",
            "subnet_id": "subnet-01d1a654a78bce0f1"
          },
          "dependencies": [
            "aws_eip.nat_eip_pods",
            "aws_nat_gateway.nat_gateway_pods",
            "aws_route_table.private_route_table_pods",
            "aws_subnet.my_pods_private_subnet_2",
            "aws_subnet.my_public_subnet_1",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ALB_JENKINS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group/sg-0c7f7aace1238d536",
            "description": "Allow GitHub webhook IPs to Jenkins through ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7f7aace1238d536",
            "ingress": [
              {
                "cidr_blocks": [
                  "134.94.2.124/32"
                ],
                "description": "Jenkins configuration UI",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "192.30.252.0/22",
                  "185.199.108.0/22",
                  "140.82.112.0/20",
                  "143.55.64.0/20"
                ],
                "description": "GitHub Webhooks",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_jenkins_sg",
            "name_prefix": "",
            "owner_id": "039612864283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB_JENKINS_sg"
            },
            "tags_all": {
              "Name": "ALB_JENKINS_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_API",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group/sg-05aa84913b23e53e5",
            "description": "Allow connections to the API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05aa84913b23e53e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2b8947767b0674d",
                  "sg-0d656622d887b1339"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_API",
            "name_prefix": "",
            "owner_id": "039612864283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_API"
            },
            "tags_all": {
              "Name": "sg_API"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_BASTION",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group/sg-0d656622d887b1339",
            "description": "Allow SSH from your IP only (BASTION)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d656622d887b1339",
            "ingress": [
              {
                "cidr_blocks": [
                  "134.94.2.8/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_BASTION",
            "name_prefix": "",
            "owner_id": "039612864283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_BASTION"
            },
            "tags_all": {
              "Name": "sg_BASTION"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_BUILDER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group/sg-05d726c00fb309247",
            "description": "Allow SSH from Bastions and Jenkins to BUILDER",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d726c00fb309247",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2b8947767b0674d",
                  "sg-0d656622d887b1339"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_BUILDER",
            "name_prefix": "",
            "owner_id": "039612864283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_BUILDER"
            },
            "tags_all": {
              "Name": "sg_BUILDER"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_ALB_JENKINS",
            "aws_security_group.sg_BASTION",
            "aws_security_group.sg_JENKINS",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_JENKINS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group/sg-0a2b8947767b0674d",
            "description": "SG for Jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2b8947767b0674d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d656622d887b1339"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7f7aace1238d536"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d656622d887b1339"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sg_JENKINS",
            "name_prefix": "",
            "owner_id": "039612864283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_JENKINS"
            },
            "tags_all": {
              "Name": "sg_JENKINS"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_ALB_JENKINS",
            "aws_security_group.sg_BASTION",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_MONITORING",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group/sg-052f18c475e891a06",
            "description": "Allow internal monitoring access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052f18c475e891a06",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2b8947767b0674d",
                  "sg-0d656622d887b1339"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_MONITORING",
            "name_prefix": "",
            "owner_id": "039612864283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_MONITORING"
            },
            "tags_all": {
              "Name": "sg_MONITORING"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_SCANNER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group/sg-01411d0cea18a4483",
            "description": "SCANNER sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01411d0cea18a4483",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a2b8947767b0674d",
                  "sg-0d656622d887b1339"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_SCANNER",
            "name_prefix": "",
            "owner_id": "039612864283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_SCANNER"
            },
            "tags_all": {
              "Name": "sg_SCANNER"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_pods_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:subnet/subnet-0e99af233c0141914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e99af233c0141914",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039612864283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pods private subnet 1"
            },
            "tags_all": {
              "Name": "Pods private subnet 1"
            },
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_pods_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:subnet/subnet-01d1a654a78bce0f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d1a654a78bce0f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039612864283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pods private subnet 2"
            },
            "tags_all": {
              "Name": "Pods private subnet 2"
            },
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:subnet/subnet-012ca80a2303a146f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012ca80a2303a146f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039612864283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet_1_eu-north-1a"
            },
            "tags_all": {
              "Name": "my_private_subnet_1_eu-north-1a"
            },
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:subnet/subnet-0218f9dd12b492d9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0218f9dd12b492d9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039612864283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_private_subnet_2_eu-north-1b"
            },
            "tags_all": {
              "Name": "my_private_subnet_2_eu-north-1b"
            },
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:subnet/subnet-03cbeae40811a199d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cbeae40811a199d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039612864283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet_1_eu-north-1a"
            },
            "tags_all": {
              "Name": "my_public_subnet_1_eu-north-1a"
            },
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:subnet/subnet-049ac68bbecd3419e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049ac68bbecd3419e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "039612864283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my_public_subnet_2_eu-north-1b"
            },
            "tags_all": {
              "Name": "my_public_subnet_2_eu-north-1b"
            },
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:vpc/vpc-00ab0082adeef6e00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07141105bdc80f4a2",
            "default_route_table_id": "rtb-020dea6d033ef2f20",
            "default_security_group_id": "sg-0d60e6daab618cd72",
            "dhcp_options_id": "dopt-0b4968e8070808d6f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00ab0082adeef6e00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020dea6d033ef2f20",
            "owner_id": "039612864283",
            "tags": {
              "Name": "vpc_developer"
            },
            "tags_all": {
              "Name": "vpc_developer"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_API_all_outbound_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-07820515407b250f0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07820515407b250f0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05aa84913b23e53e5",
            "security_group_rule_id": "sgr-07820515407b250f0",
            "tags": {
              "Name": "Allow all outbound connection to API ipv4"
            },
            "tags_all": {
              "Name": "Allow all outbound connection to API ipv4"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_API",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_BASTION_all_outbound_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-0cc35c1c3eee87ee9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cc35c1c3eee87ee9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d656622d887b1339",
            "security_group_rule_id": "sgr-0cc35c1c3eee87ee9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_BASTION",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_MONITORING_all_outbound_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-05854bfc286708c46",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05854bfc286708c46",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052f18c475e891a06",
            "security_group_rule_id": "sgr-05854bfc286708c46",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_MONITORING",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_SCANNER_all_outbound_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-0f1597fec065c25db",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0f1597fec065c25db",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01411d0cea18a4483",
            "security_group_rule_id": "sgr-0f1597fec065c25db",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_SCANNER",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_API_ipv4_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-0e11030bf443c8ba6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e11030bf443c8ba6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05aa84913b23e53e5",
            "security_group_rule_id": "sgr-0e11030bf443c8ba6",
            "tags": {
              "Name": "Allow HTTP inbound connection to API ipv4"
            },
            "tags_all": {
              "Name": "Allow HTTP inbound connection to API ipv4"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_API",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_API_ipv4_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-041581bd844881865",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-041581bd844881865",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05aa84913b23e53e5",
            "security_group_rule_id": "sgr-041581bd844881865",
            "tags": {
              "Name": "Allow HTTPS inbound connection to API ipv4"
            },
            "tags_all": {
              "Name": "Allow HTTPS inbound connection to API ipv4"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_API",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_API_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-02ea53c19a85b5c61",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02ea53c19a85b5c61",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d656622d887b1339",
            "security_group_id": "sg-05aa84913b23e53e5",
            "security_group_rule_id": "sgr-02ea53c19a85b5c61",
            "tags": {
              "Name": "Allow SSH from Bastion"
            },
            "tags_all": {
              "Name": "Allow SSH from Bastion"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_API",
            "aws_security_group.sg_BASTION",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_API_ssh_from_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-0da3f55a730ec8dd5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0da3f55a730ec8dd5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a2b8947767b0674d",
            "security_group_id": "sg-05aa84913b23e53e5",
            "security_group_rule_id": "sgr-0da3f55a730ec8dd5",
            "tags": {
              "Name": "Allow SSH from Jenkins"
            },
            "tags_all": {
              "Name": "Allow SSH from Jenkins"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_ALB_JENKINS",
            "aws_security_group.sg_API",
            "aws_security_group.sg_BASTION",
            "aws_security_group.sg_JENKINS",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_BASTION_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-09be539a00bf9b76b",
            "cidr_ipv4": "134.94.2.124/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09be539a00bf9b76b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d656622d887b1339",
            "security_group_rule_id": "sgr-09be539a00bf9b76b",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_BASTION",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_MONITORING_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-0dcc4b28851393b23",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0dcc4b28851393b23",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-052f18c475e891a06",
            "security_group_rule_id": "sgr-0dcc4b28851393b23",
            "tags": {
              "Name": "Allow any device in the 10.0.0.0/16 VPC CIDR block to access port 8080"
            },
            "tags_all": {
              "Name": "Allow any device in the 10.0.0.0/16 VPC CIDR block to access port 8080"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_MONITORING",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_MONITORING_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-020e263c913a0cdb7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-020e263c913a0cdb7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d656622d887b1339",
            "security_group_id": "sg-052f18c475e891a06",
            "security_group_rule_id": "sgr-020e263c913a0cdb7",
            "tags": {
              "Name": "Allow SSH from Bastion to monitoring EC2 instance"
            },
            "tags_all": {
              "Name": "Allow SSH from Bastion to monitoring EC2 instance"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_BASTION",
            "aws_security_group.sg_MONITORING",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_MONITORING_ssh_from_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-0e68728bd60f99b89",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0e68728bd60f99b89",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a2b8947767b0674d",
            "security_group_id": "sg-052f18c475e891a06",
            "security_group_rule_id": "sgr-0e68728bd60f99b89",
            "tags": {
              "Name": "Allow SSH from Jenkins to mointoring EC2 instance"
            },
            "tags_all": {
              "Name": "Allow SSH from Jenkins to mointoring EC2 instance"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_ALB_JENKINS",
            "aws_security_group.sg_BASTION",
            "aws_security_group.sg_JENKINS",
            "aws_security_group.sg_MONITORING",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_SCANNER_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-04c667aa7faec5db6",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-04c667aa7faec5db6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01411d0cea18a4483",
            "security_group_rule_id": "sgr-04c667aa7faec5db6",
            "tags": {
              "Name": "Allow any device in the 10.0.0.0/16 VPC CIDR block to access port 8080"
            },
            "tags_all": {
              "Name": "Allow any device in the 10.0.0.0/16 VPC CIDR block to access port 8080"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_SCANNER",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_SCANNER_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-04ecc631743c00704",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-04ecc631743c00704",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d656622d887b1339",
            "security_group_id": "sg-01411d0cea18a4483",
            "security_group_rule_id": "sgr-04ecc631743c00704",
            "tags": {
              "Name": "Allow SSH from Bastion to scanner EC2 instance"
            },
            "tags_all": {
              "Name": "Allow SSH from Bastion to scanner EC2 instance"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_BASTION",
            "aws_security_group.sg_SCANNER",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg_SCANNER_ssh_from_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group-rule/sgr-0216f8fbcfaeebe24",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0216f8fbcfaeebe24",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0a2b8947767b0674d",
            "security_group_id": "sg-01411d0cea18a4483",
            "security_group_rule_id": "sgr-0216f8fbcfaeebe24",
            "tags": {
              "Name": "Allow SSH from Jenkins to scanner EC2 instance"
            },
            "tags_all": {
              "Name": "Allow SSH from Jenkins to scanner EC2 instance"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_ALB_JENKINS",
            "aws_security_group.sg_BASTION",
            "aws_security_group.sg_JENKINS",
            "aws_security_group.sg_SCANNER",
            "aws_vpc.my_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group/sg-0a1ab93976b60d5f3",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0a1ab93976b60d5f3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0407f512282ed7378"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "API_EKS_ThreatGPT-cluster-20250531101209945200000001",
            "name_prefix": "API_EKS_ThreatGPT-cluster-",
            "owner_id": "039612864283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "API_EKS_ThreatGPT-cluster"
            },
            "tags_all": {
              "Name": "API_EKS_ThreatGPT-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:039612864283:security-group/sg-0407f512282ed7378",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0407f512282ed7378",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1ab93976b60d5f3"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1ab93976b60d5f3"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1ab93976b60d5f3"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1ab93976b60d5f3"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1ab93976b60d5f3"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1ab93976b60d5f3"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "API_EKS_ThreatGPT-node-20250531101209946000000002",
            "name_prefix": "API_EKS_ThreatGPT-node-",
            "owner_id": "039612864283",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "API_EKS_ThreatGPT-node",
              "kubernetes.io/cluster/API_EKS_ThreatGPT": "owned"
            },
            "tags_all": {
              "Name": "API_EKS_ThreatGPT-node",
              "kubernetes.io/cluster/API_EKS_ThreatGPT": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00ab0082adeef6e00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-743129193",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a1ab93976b60d5f3",
            "security_group_rule_id": "sgr-00e6a411a3a77e029",
            "self": false,
            "source_security_group_id": "sg-0407f512282ed7378",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1395128777",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0407f512282ed7378",
            "security_group_rule_id": "sgr-02afb352831029a21",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3571833741",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0407f512282ed7378",
            "security_group_rule_id": "sgr-023223ddbb1b59e25",
            "self": false,
            "source_security_group_id": "sg-0a1ab93976b60d5f3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2483295780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0407f512282ed7378",
            "security_group_rule_id": "sgr-04e33dbea4301ff9a",
            "self": false,
            "source_security_group_id": "sg-0a1ab93976b60d5f3",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1564897714",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0407f512282ed7378",
            "security_group_rule_id": "sgr-039876ef90ab147a9",
            "self": false,
            "source_security_group_id": "sg-0a1ab93976b60d5f3",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1310346643",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0407f512282ed7378",
            "security_group_rule_id": "sgr-061c52df05e2acdc9",
            "self": false,
            "source_security_group_id": "sg-0a1ab93976b60d5f3",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-716930648",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0407f512282ed7378",
            "security_group_rule_id": "sgr-0e8f80bbc8eed647e",
            "self": false,
            "source_security_group_id": "sg-0a1ab93976b60d5f3",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3044161766",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0407f512282ed7378",
            "security_group_rule_id": "sgr-058f3864f40ffcc7d",
            "self": false,
            "source_security_group_id": "sg-0a1ab93976b60d5f3",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3643866313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0407f512282ed7378",
            "security_group_rule_id": "sgr-05bb2b57186316bc5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1404983855",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0407f512282ed7378",
            "security_group_rule_id": "sgr-0d090342675ecc48c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-4158781888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0407f512282ed7378",
            "security_group_rule_id": "sgr-0601f38c9b8a1afc5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_main_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}